welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var t= new Array[Color](getMondeHauteur());
	var w:Int=0;

	for (y<-0 to getMondeHauteur()-1) {
	
		t(y)=getCouleurSol();
		avance();
	}
		
	for (z<-0 to getMondeLargeur()-1) {
		gauche();
		avance();
		droite();
		avance();
		baisseBrosse();
		setCouleurBrosse(w);
		leveBrosse();
		w=w+1;
		
	}
}
